--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ traumatic-brain-injury/dataset/
 traumatic-brain-injury/dataset_d1/
 traumatic-brain-injury/dataset_d2/
 traumatic-brain-injury/dataset_d9/
+traumatic-brain-injury/dataset_d1d2/
+traumatic-brain-injury/dataset_d1d9/
+traumatic-brain-injury/dataset_d2d9/
 traumatic-brain-injury/scenario1/bin
 traumatic-brain-injury/scenario2/bin
 traumatic-brain-injury/scenario3/bin
